--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
   <body>
     <div class="flex-shrink-0 p-3" style="width: 280px;">
         <a href="/" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
-          <svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-          <span class="fs-5 fw-semibold">Collapsible</span>
+            <img src="weave_logo.png" alt="Weave" width="30" height="24" > 
+<!--          <svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"></use></svg> -->
+          <span class="fs-5 fw-semibold">Weave API Documentation</span>
         </a>
         <ul class="list-unstyled ps-0">
           <li class="mb-1">
