--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
 <link href="/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-<link rel="icon" href="/weave_favicon.png">
+<link rel="icon" href="/img/weave_favicon.png">
     <!-- Favicons -->
 <!--
 <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
@@ -117,9 +117,9 @@
   <body>
     <div class="flex-shrink-0 p-3" style="width: 280px;">
         <a href="/" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
-            <img src="weave_logo.png" alt="Weave" width="30" height="24" > 
+            <img src="/img/weave_logo.png" alt="Weave" width="30" height="24" > 
 <!--          <svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"></use></svg> -->
-          <span class="fs-5 fw-semibold">Weave API Documentation</span>
+          <span class="fs-5 fw-semibold">Weave API</span>
         </a>
         <ul class="list-unstyled ps-0">
           <li class="mb-1">
@@ -175,6 +175,9 @@
             </div>
           </li>
         </ul>
+      </div>
+      <div>
+          Main text
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
