--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
   </head>
 
   <body>
+<div class="d-flex">
     <div class="flex-shrink-0 p-3" style="width: 280px;">
         <a href="/" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
             <img src="/img/weave_logo.png" alt="Weave" width="30" height="24" > 
@@ -176,9 +177,10 @@
           </li>
         </ul>
       </div>
-      <div>
+      <div class="p-2 w-75">
           Main text
       </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
