--- a/index.html
+++ b/index.html
@@ -123,9 +123,12 @@
           <span class="fs-5 fw-semibold">Weave API</span>
         </a>
         <ul class="list-unstyled ps-0">
-          <li class="mb-1">
+            <li class="mb-1">
+                <a class="btn text-decoration-none href="#introduction">Introduction</a>
+            </li>
+            <li class="mb-1">
             <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
-              Home
+              API Design
             </button>
             <div class="collapse show" id="home-collapse" style="">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
