--- a/index.html
+++ b/index.html
@@ -174,26 +174,26 @@
         </ul>
       </div>
       <div class="p-2 w-75">
-          <section class="mt-3" id="introduction">
+          <section class="mt-4" id="introduction">
 <h3> Background</h3>
 <p>Weave is an API aggregator for the Travel Tech industry.  Weave enables applications to integrate with a number of different service providers using a single API.  When the underlying service provider APIs change, the integrations built using Weave will be updated with minimal to no development effort by application developers.  Weave will continue to support previous versions of its own API endpoints for a predetermined period of time to enable developers sufficient time to plan and execute updates to their product roadmaps</p>
           </section>
           <h3>API Design</h3>
-          <section class="mt-3" id="domain">
+          <section class="mt-4" id="domain">
             <p class="lead">Domain</p>
-              <p>Requests are made to the Weave API domain eg https://use1.weaveapi.com</p>
+              <p>Requests are made to the Weave API domain eg <code>https://use1.weaveapi.com</code></p>
             <p>Requests can only be made using SSL enabled connections</p>
           </section>
-          <section class="mt-3" id="api_version">
+          <section class="mt-4" id="api_version">
               <p class="lead">API Versions</p>
               <p>Requests will specify the Weave API version being used.  If the version is omitted (or is invalid), Weave will default to the latest API version.</p>
               <p>Deprecation schedule: Weave will support 2 previous versions for a period of 6 months before deprecation</p>
           </section>
-          <section class="mt-3" id="endpoints">
+          <section class="mt-4" id="endpoints">
             <p class="lead">Endpoints</p>
             <p>Each API will have an end point eg /listings.  End points may require additional query parameters (for GET requests) or body parameters (for POST requests).</p>
           </section>
-          <section class="mt-3" id="headers">
+          <section class="mt-4" id="headers">
             <p class="lead">Headers</p>
             <p>Additional parameters for the request, for example authentication tokens and request destinations</p>
             <p>
@@ -207,7 +207,8 @@ curl -X GET \
             </p>
           </section>
           <h3>Context</h3>
-          <section class="mt-3" id="integrations">
+          <section class="mt-4" id="integrations">
+		  <p class="lead">Integrations</p>
             <table class="table">
                 <thead>
                     <tr>
@@ -251,18 +252,18 @@ curl -X GET \
                 </tbody>
             </table>
           </section>
-          <section class="mt-3" id="origin">
+          <section class="mt-4" id="origin">
           <p class="lead">Origin</p>
         <p>Origin for all requests will be:
 https://use1.weaveapi.com
 </p>
           </section>
-          <section class="mt-3" id="api_version">
+          <section class="mt-4" id="api_version">
             <p class="lead">API Version</p>
               <p>Current API version is “v1”</p>
               <p>Request paths should be prefixed with the API version ie  “/api/v1/endpoint/path”</p>
           </section>
-          <section class="mt-3" id="api_headers">
+          <section class="mt-4" id="api_headers">
             <p class="lead">Headers</p>
               <p>The following headers need to be included with each request</p>
               <p>X-WEAVE-APIKEY 
@@ -295,7 +296,7 @@ Id of the end user on the target PMS / OTA system
 </p>
           </section>
 
-          <section class="mt-3" id="returned_data">
+          <section class="mt-4" id="returned_data">
               <p class="lead">Returned data</p>
 <p>Data is always returned in the format</p>
               <p>{
@@ -306,7 +307,7 @@ status:  [ true / false indication of success of request ]
 </p>
               <p>Note: If the proxy target does not support the endpoint, the response will be returned with the data and raw fields as empty arrays</p>
           </section>
-          <section class="mt-3" id="errors">
+          <section class="mt-4" id="errors">
 <p class="lead">Errors</p>
               <p>Errors are returned with the appropriate error code and message</p>
               <p>{
@@ -317,7 +318,7 @@ proxy_message: “......”		// error message returned from target
           </section>
 
 	      <h3>Endpoints</h3>
-	      <section class="mt-3" id="authentication">
+	      <section class="mt-4" id="authentication">
 <p class="lead">Authentication</p>
 		      <h6>Context</h6>
 		      <p>This endpoint is used to obtain authentication tokens from the target PMS.  The authentication token is then used in future requests (ie passed in the header as X-WEAVE-PROXY-ACCESS-TOKEN)</p>
@@ -333,21 +334,61 @@ proxy_message: “......”		// error message returned from target
 		      <p>client_id: PMS user client id</p>
 <p>client_secret: PMS user client secret</p>
 		      <h6>Results</h6>
-		      <p>{
-	status: true/false,
-	data: [
-		{
-			access_token: ‘xs34…’	// access token to be used in future requests in the X-WEAVE-PROXY-ACCESS-TOKEN header field
-			expiry: 1749275583083	// expiry time of the access_token presented as the number of milliseconds since the beginning of the UNIX epoch
-		}
-	],
-	raw: …. 	
-}
-</p>
+		      <pre>
+			{
+			  status: true/false,
+			  data: [
+			    {
+			      access_token: ‘xs34…’	// access token to be used in future requests in the X-WEAVE-PROXY-ACCESS-TOKEN header field
+			      expiry: 1749275583083	// expiry time of the access_token presented as the number of milliseconds since the beginning of the UNIX epoch
+			    }
+			  ],
+			  raw: …. 	
+			}
+			</pre>
 <h6>Supported destinations</h6>
 		      <ul>
 			      <li>Hostaway</li>
 			      <li>Hospitable</li>
+		      </ul>
+	      </section>
+	      <section class="mt-4" id="listings">
+		<p class="lead">Listing</p>
+		      <h6>Context</h6>
+		      <p>Request listings from PMS</p>
+		      <h6>Path</h6>
+		      <p>/listings</p>
+		      <h6>Request type</h6>
+		      <p>GET</p>
+		      <h6>Headers</h6>
+		      <p>Content-type: application/json</p>
+		      <h6>Search parameters</h6>
+		      <p>listingId: PMS id of the listing</p>
+		      <h6>Results</h6>
+		      <pre>
+			{
+			  status: true/false,
+			  data: [
+			    {
+				// listing object
+			    }
+			  ],
+			  raw: {
+				// raw response from PMS
+			  }	
+			}
+		      </pre>
+		      <h6>Example</h6>
+		      <p>https://use1.weaveapi.com/api/v1/listings/listingId=1234</p>
+		      <h6>Supported destinations</h6>
+		      <ul>
+			      <li>Guesty for Hosts</li>
+			      <li>Hostaway</li>
+			      <li>Hospitable</li>
+			      <li>Lodgify</li>
+			      <li>Lodgix</li>
+			      <li>Smoobu</li>
+			      <li>Uplisting</li>
 		      </ul>
 	      </section>
       </div>
