--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <style>
       code {
         background-color: #f1f1f1;
+        width: 100%;
       }
       
       .bd-placeholder-img {
@@ -108,7 +109,7 @@
 
   <body>
 <div class="d-flex">
-    <div class="flex-shrink-0 p-3 fixed-top" style="width: 280px;">
+    <div class="flex-shrink-0 p-3 position-static" style="width: 280px;">
         <a href="/" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
             <img src="/img/weave_logo.png" alt="Weave" width="30" height="24" > 
 <!--          <svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"></use></svg> -->
