--- a/index.html
+++ b/index.html
@@ -315,13 +315,13 @@ Id of the end user on the target PMS / OTA system
               <p>
 <div class="code">
 <pre>
-  <code>
+<code>
 {
   data: [ array of normalized data ],
   raw:  [ raw data as returned by the proxy ]
   status:  [ true / false indication of success of request ] 
 }
-  </code>
+</code>
 </pre>
 </div>
             
@@ -334,12 +334,12 @@ Id of the end user on the target PMS / OTA system
               <p>
 <div class="code">
 <pre>
-  <code>
+<code>
 {
-	status: false
+  status: false
   proxy_message: “......”		// error message returned from target
 }
-  </code>
+</code>
 </pre>
 </div>
 </p>
@@ -374,7 +374,7 @@ Id of the end user on the target PMS / OTA system
             <dt class="col-sm-3">Results</dt>
             <dd class="col-sm-9">
               <div class="code">
-              <pre>
+<pre>
 <code>
 {
   status: true/false,
@@ -387,7 +387,7 @@ Id of the end user on the target PMS / OTA system
   raw: …. 	
 }
 </code>
-              </pre>
+</pre>
               </div>
             </dd>
 
@@ -441,7 +441,7 @@ Id of the end user on the target PMS / OTA system
             </dd>
 
             <dt class="col-sm-3">Example</dt>
-            <dd class="col-sm-9"><p><code>https://use1.weaveapi.com/api/v1/listings/listingId=1234</code></p></dd>
+            <dd class="col-sm-9"><p><code>https://use1.weaveapi.com/api/v1/listings?listingId=1234</code></p></dd>
 
             <dt class="col-sm-3">Supported destinations</dt>
             <dd class="col-sm-9">
@@ -523,7 +523,7 @@ Id of the end user on the target PMS / OTA system
             </dd>
 
             <dt class="col-sm-3">Example</dt>
-            <dd class="col-sm-9"><p><code>https://use1.weaveapi.com/api/v1/reservations?reservationId=1234&listingId=9876&arrivalStartDate=2023–07-01&arrivalEndDate=2023-07-31</code></p></dd>
+            <dd class="col-sm-9"><p><code>https://use1.weaveapi.com/api/v1/reservations?reservationId=1234&listingId=9876&startDate=2023–07-01&endDate=2023-07-31</code></p></dd>
 
             <dt class="col-sm-3">Supported destinations</dt>
             <dd class="col-sm-9">
