--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   
     <style>
       body {
-
+        height: 100vh;
+        overflow: hidden;
       }
 
       .main-text {
-
+        height: 100vh;
+        overflow: auto;
       }
       
       .code, code {
