--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="true">
               Context
             </button>
-            <div class="collapse" id="dashboard-collapse">
+            <div class="collapse show" id="dashboard-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                 <li><a href="#integrations" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Integrations</a></li>
                 <li><a href="#origin" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Origin</a></li>
@@ -152,7 +152,7 @@
             <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="true">
               Endpoints
             </button>
-            <div class="collapse" id="orders-collapse">
+            <div class="collapse show" id="orders-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                 <li><a href="#authentication" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Authentication</a></li>
                 <li><a href="#listings" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Listings</a></li>
