--- a/index.html
+++ b/index.html
@@ -192,18 +192,18 @@
             <p class="lead">Headers</p>
             <p>Additional parameters for the request, for example authentication tokens and request destinations</p>
             <p>Example</p>
-<code>
+
 <div class="code">
-<pre>
+<pre><code>
 curl -X GET \ 
       https://use1.weaveapi.com/v1/reservations/1234 \                 // Weave API endpoint
       -H 'Authorization: Bearer myaccesstoken’  \                      // Weave API access token
       -H 'Destination: hostaway’ \                                     // Proxied PMS
       -H 'Destination- auth: Hostaway access token’  \                 // Proxied PMS access token 
       -H 'Cache-control: no-cache’ \                                   // Additional header commands    
-</pre>
+</code></pre>
 </div>
-</code>
+
           </section>
           
           <section class="mt-5" id="integrations">
