--- a/index.html
+++ b/index.html
@@ -300,15 +300,13 @@ Id of the end user on the target PMS / OTA system
 <p>Data is always returned in the format</p>
               <p>
 <div class="code">
-<pre>
-<code>
+<pre><code>
 {
   data: [ array of normalized data ],
   raw:  [ raw data as returned by the proxy ]
   status:  [ true / false indication of success of request ] 
 }
-</code>
-</pre>
+</code></pre>
 </div>
             
 </p>
@@ -319,14 +317,12 @@ Id of the end user on the target PMS / OTA system
               <p>Errors are returned with the appropriate error code and message</p>
               <p>
 <div class="code">
-<pre>
-<code>
+<pre><code>
 {
   status: false
   proxy_message: “......”		// error message returned from target
 }
-</code>
-</pre>
+</code></pre>
 </div>
 </p>
           </section>
@@ -360,8 +356,7 @@ Id of the end user on the target PMS / OTA system
             <dt class="col-sm-3">Results</dt>
             <dd class="col-sm-9">
               <div class="code">
-<pre>
-<code>
+<pre><code>
 {
   status: true/false,
   data: [
@@ -372,8 +367,7 @@ Id of the end user on the target PMS / OTA system
   ],
   raw: …. 	
 }
-</code>
-</pre>
+</code></pre>
               </div>
             </dd>
 
@@ -408,8 +402,7 @@ Id of the end user on the target PMS / OTA system
             <dt class="col-sm-3">Results</dt>
             <dd class="col-sm-9">
               <div class="code">
-              <pre>
-<code>
+<pre><code>
 {
   status: true/false,
   data: [
@@ -421,8 +414,7 @@ Id of the end user on the target PMS / OTA system
     // raw response from PMS
   }	
 }   
-</code>
-              </pre>
+</code></pre>
               </div>
             </dd>
 
