--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           </li>
         </ul>
       </div>
-      <div class="p-2 w-75 main-text">
+      <div class="p-2 w-auto main-text">
           <section class="mt-5" id="introduction">
 <h3> Background</h3>
 <p>Weave is an API aggregator for the travel tech industry.  Weave enables applications to integrate with a number of different service providers using a single API.  </p>
