--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@
   </head>
 
   <body>
+<!-- Google Analytics Tag -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9ZLM18JZQ0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9ZLM18JZQ0');
+</script>
+<!-- --------------------- -->
+
+	  
 <div class="d-flex">
     <div class="flex-shrink-0 p-3 fixed-sidebar" style="width: 280px;">
         <a href="/" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
