--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Weave API Documentation</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="/css/site_style.css" rel="stylesheet">
-    <link rel="icon" href="/img/weave_favicon.png">
+    <link rel="icon" href="/img/weave/favicon.png">
     <!-- Custom styles for this template -->
     <link href="/css/sidebars.css" rel="stylesheet">
 </head>
@@ -27,7 +27,7 @@
     <div class="d-flex">
         <div class="flex-shrink-0 p-3 fixed-sidebar" style="width: 280px;">
             <a href="/" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
-                <img src="/img/weave_logo.png" alt="Weave" width="30" height="24">
+                <img src="/img/weave/logo.png" alt="Weave" width="30" height="30">
                 <span class="fs-5 fw-semibold">Weave API</span>
             </a>
             <ul class="list-unstyled ps-0">
@@ -91,8 +91,10 @@
             </section>
 
             <section class="mt-5" id="account_setup">
-              <h3>Account setup</h3>
-              <p>Account setup instructions go here</p>
+              <h3>Get started</h3>
+              <p class="lead">Organization account</p>
+              <p>In the user profile, create a new organization for your company.  You will be able to invite colleagues to join this organizational account.</p>
+              <img src="/img/create_org.png" class="rounded mx-auto d-block" alt="Create organization form">
             </section>
 
             <section class="mt-5" id="domain">
