--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 </li>
 
                 <li class="mb-1">
+                    <a class="btn text-decoration-none" href="#account_setup">Get started</a>
+                </li>
+
+                <li class="mb-1">
                     <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
                         API Design
                     </button>
@@ -80,7 +84,7 @@
                         </ul>
                     </div>
                 </li>
-                
+
             </ul>
         </div>
         <div class="p-2 w-auto main-text">
@@ -95,16 +99,25 @@
               <h3>Get started</h3>
               <p class="lead">Organization account</p>
               <p>In the user profile, create a new organization for your company.  You will be able to invite colleagues to join this organizational account.</p>
-              <div class="col-sm-6">
-                <img src="/img/create_org.png" class="rounded mx-auto d-block" alt="Create organization form">
+              <div class="offset-sm-2 col-sm-8">
+                <img src="/img/create_org.png" class="rounded mx-auto d-block" alt="Create organization form" style="width:100%">
               </div>
 
+              <p class="lead">API key</p>
               <p>In the organizational dashboard, create the Weave API key for the organization.  This key must be included in the header for each request</p>
               <p>A new key can be generated at any time but do note that only one key can be in operation at any time.  Regenerating a new key will immediately invalidate any other existing key</p>
-              <div class="col-sm-6">
-                <img src="/img/generate_keys.png" class="rounded mx-auto d-block" alt="Generate API keys">
+              <div class="offset-sm-2 col-sm-8">
+                <img src="/img/generate_keys.png" class="rounded mx-auto d-block" alt="Generate API keys" style="width:100%">
               </div>
-              
+
+              <p class="lead">Integrations</p>
+              <p>Select the integrations required for your connections</p>
+              <div class="offset-sm-2 col-sm-8">
+                <img src="/img/manage_integrations.png" class="rounded mx-auto d-block" alt="Activate required integrations" style="width:100%">
+              </div>
+
+
+
             </section>
 
             <section class="mt-5" id="domain">
