added sidebars.css to dashboard routes

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
               <h3>Get started</h3>
               <p class="lead">Organization account</p>
               <p>In the user profile, create a new organization for your company.  You will be able to invite colleagues to join this organizational account.</p>
+              <p>After the organization has been created, select it in the dropdown list and click on the "Visit organization dashboard link".</p>
               <div class="offset-sm-2 col-sm-8">
                 <img src="/img/create_org.png" class="rounded mx-auto d-block" alt="Create organization form" style="width:100%">
               </div>
@@ -115,8 +116,6 @@
               <div class="offset-sm-2 col-sm-8">
                 <img src="/img/manage_integrations.png" class="rounded mx-auto d-block" alt="Activate required integrations" style="width:100%">
               </div>
-
-
 
             </section>
 
